Se agrega devise y se configura modelo user, para cerrar session se uso un boton, ya que con link_to, no funciona

--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -8,6 +8,15 @@
       <%= link_to "Inicios", root_path, class:"nav-item nav-link"%>
       <%= link_to "Noticias",  news_index_path , class:"nav-item nav-link"%>
       <%= link_to "Escribir", new_news_path, class:"nav-item nav-link"%>
+      <%if user_signed_in? %>
+      <li class="nav-item">
+         <span>Usuario logeado</span>
+         <%= button_to "Cerrar Sesión", destroy_user_session_path, method: :delete, class:"nav-item nav-link"%>
+      </li>
+      <%else%>
+      <%= link_to "Iniciar Sesión", new_user_session_path, class:"nav-item nav-link"%>
+      <%= link_to "Registro", new_user_registration_path, class:"nav-item nav-link"%>
+      <%end%>
     </div>
   </div>
 </nav>
