Se agrega gemma figaro, configuracion de data para envio de correo, se omite apllication.yml en git

--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -1,6 +1,7 @@
 <p style="color: green"><%= notice %></p>
 
 <%= render @news %>
+<p>Noticia escrita por : <%=@news.user.email %></p>
 
 <div>
   <%= link_to "Edit this news", edit_news_path(@news) %> |
